--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,9 +206,10 @@ body{
 /* GALLERY */
 .gallery{
   margin: 30px auto 50px;
-  width: 80%;
+  max-width: 90%;
+  object-fit: contain;
 }
-.gallery img{
+.gallery-image{
   cursor: pointer;
 }
 .galleryid{
@@ -245,11 +246,12 @@ body{
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1);
   }
 .single img{
-  width: auto;
-  height: 80vh;
+  width: 100%;
+  height: auto;
   margin-top: 30px;
   margin-bottom: 30px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1);
+
   }
 
   .single_square{
@@ -271,8 +273,8 @@ body{
   margin-bottom: 30px;
 }
 .threeInRow img{
-  width: auto;
-  height: 80vh;
+  width: 100%;
+  height: auto;
   object-fit: cover;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
